# LBM_cpp

./: .gitignore  CMakeLists.txt  main.cpp  main.cu
src/: function.hpp  global_variable.hpp  monitor.hpp  option.hpp  parameter.hpp
src/help/: cuda_help.hpp  help.hpp  params.hpp  qsgs.hpp  random_num.hpp  timer.hpp
src/initialization/: contact_angle_test.hpp  get_corner.hpp  init_CA_test.hpp  init_boiling_simple.hpp  init_porous_media.hpp  initialization.hpp
src/output/: output.hpp  output_CA_test.hpp  output_boiling_simple.hpp  output_contact_angle.hpp  output_porous_media.hpp
src/population/: boundary.hpp  collision.hpp  energy.hpp  force.hpp  macro.hpp  population.hpp  streaming.hpp
src/population_gpu/: boundary_gpu.hpp  collision_gpu.hpp  energy_gpu.hpp  force_gpu.hpp  macro_gpu.hpp  population_gpu.hpp  streaming_gpu.hpp
